--- a/source.yml
+++ b/source.yml
@@ -481,5 +481,8 @@ version_control:
         github: mattgodbolt/seasocks
         tag: v1.4.3
 
+    - slam/eds:
+        github: jhidalgocarrio/slam-eds
+        branch: $ROCK_BRANCH
 
 
