--- a/source.yml
+++ b/source.yml
@@ -288,9 +288,8 @@ version_control:
 
     - slam/ceres_solver:
         type: git
-        url: https://ceres-solver.googlesource.com/ceres-solver
+        url: https://github.com/jhidalgocarrio/ceres-solver.git #https://ceres-solver.googlesource.com/ceres-solver
         branch: master
-        tag: 2.0.0
 
     - slam/gtsam:
         github: borglab/gtsam
