--- a/source.yml
+++ b/source.yml
@@ -488,3 +488,20 @@ version_control:
         github: jhidalgocarrio/slam-orogen-eds
         branch: $ROCK_BRANCH
 
+    - tools/torch:
+        type: archive
+        url: https://download.pytorch.org/libtorch/lts/1.8/cu102/libtorch-cxx11-abi-shared-with-deps-1.8.2%2Bcu102.zip
+        archive_dir: libtorch
+
+    - perception/depthnn:
+        github: jhidalgocarrio/perception-depthnn
+        branch: $ROCK_BRANCH
+
+    - slam/dso:
+        github: jhidalgocarrio/slam-dso
+        branch: $ROCK_BRANCH
+
+    - slam/orogen/dso:
+        github: jhidalgocarrio/slam-orogen-dso
+        branch: $ROCK_BRANCH
+
