libs: autobuild for depthnn getting the midas model from server

--- a/source.yml
+++ b/source.yml
@@ -494,7 +494,7 @@ version_control:
 
     - tools/torch:
         type: archive
-        url: https://download.pytorch.org/libtorch/lts/1.8/cu102/libtorch-cxx11-abi-shared-with-deps-1.8.2%2Bcu102.zip
+        url: https://download.pytorch.org/libtorch/lts/1.8/cpu/libtorch-cxx11-abi-shared-with-deps-1.8.2%2Bcpu.zip
         archive_dir: libtorch
 
     - perception/depthnn:
